feat: add register and login

--- a/backend/utils/email_templates/verification_code.html
+++ b/backend/utils/email_templates/verification_code.html
@@ -71,7 +71,7 @@
         <div class="footer">
             С уважением, <br>
             Команда нашего сервиса<br>
-            <a href="https://example.com">example.com</a>
+            <a href="https://www.fasttaski.ru">https://www.fasttaski.ru</a>
         </div>
     </div>
 </body>
